--- a/composer.json
+++ b/composer.json
@@ -16,22 +16,23 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
+        "php": "^7.4|>=8.0",
         "illuminate/support": "^8.37",
         "laravel/framework": "^8.40",
         "nyholm/psr7": "^1.4",
-        "pheature/toggle-core": "^0.1",
-        "pheature/toggle-model": "^0.1.2",
-        "pheature/inmemory-toggle": "^0.1",
-        "pheature/toggle-crud-psr11-factories": "^0.1.2"
+        "pheature/toggle-core": "^0.3",
+        "pheature/toggle-model": "^0.3",
+        "pheature/inmemory-toggle": "^0.3",
+        "pheature/toggle-crud-psr11-factories": "^0.3"
     },
     "require-dev": {
         "icanhazstring/composer-unused": "^0.7.5",
         "infection/infection": "^0.25",
-        "pheature/dbal-toggle": "^0.1",
-        "pheature/php-sdk": "^0.1.2",
-        "pheature/toggle-crud": "^0.1.2",
-        "pheature/toggle-crud-psr7-api": "^0.1.2",
+        "pheature/dbal-toggle": "^0.3",
+        "pheature/php-sdk": "^0.3",
+        "pheature/toggle-crud": "^0.3",
+        "pheature/toggle-crud-psr7-api": "^0.3",
+        "phpcompatibility/php-compatibility": "^9.3",
         "phpro/grumphp": "^1.0",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^8.0 || ^9.0",
