--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,13 @@
         "illuminate/support": "^8.37",
         "laravel/framework": "^8.40",
         "nyholm/psr7": "^1.4",
-        "pheature/toggle-core": "^0.5",
-        "pheature/toggle-model": "^0.5",
         "pheature/inmemory-toggle": "^0.5",
-        "pheature/toggle-crud-psr11-factories": "^0.5"
+        "pheature/toggle-core": "^0.5",
+        "pheature/toggle-crud-psr11-factories": "^0.5",
+        "pheature/toggle-model": "^0.5"
     },
     "require-dev": {
-        "icanhazstring/composer-unused": "^0.7.5",
-        "infection/infection": "^0.25",
+        "icanhazstring/composer-unused": "^0.8",
         "pheature/dbal-toggle": "^0.5",
         "pheature/php-sdk": "^0.5",
         "pheature/toggle-crud": "^0.5",
@@ -36,7 +35,7 @@
         "phpro/grumphp": "^1.0",
         "phpstan/phpstan": "^1.0",
         "phpunit/phpunit": "^8.0 || ^9.0",
-        "roave/infection-static-analysis-plugin": "^1.8",
+        "roave/infection-static-analysis-plugin": "^1.18",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/var-dumper": "^4.2 || ^5.0",
         "vimeo/psalm": "^4.4"
