--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0|^8.1",
+        "php": "^7.4|^8.0|^8.1|^8.2",
         "illuminate/support": "^8.37",
         "laravel/framework": "^8.40",
         "nyholm/psr7": "^1.4",
@@ -37,7 +37,7 @@
         "phpunit/phpunit": "^8.0 || ^9.0",
         "roave/infection-static-analysis-plugin": "^1.18",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/var-dumper": "^4.2 || ^5.0",
+        "symfony/var-dumper": "^4.2 || ^5.0 || ^6.0",
         "vimeo/psalm": "^4.4"
     },
     "autoload": {
@@ -52,7 +52,7 @@
     },
     "scripts": {
         "check-all": [
-            "composer unused",
+            "composer-unused",
             "@cs-check",
             "@test",
             "@inspect",
