--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0|^8.1|^8.2",
+        "php": "~7.4.0|~8.0.0|~8.1.0|~8.2.0",
         "illuminate/support": "^8.37",
         "laravel/framework": "^8.40",
         "nyholm/psr7": "^1.4",
