--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "laravel/framework": "^8.40|^9.0|^10.0",
         "nyholm/psr7": "^1.4",
         "pheature/inmemory-toggle": "^0.7",
-        "pheature/toggle-crud-psr11-factories": "^0.7",
+        "pheature/toggle-crud-psr11-factories": "^0.7.2",
         "pheature/toggle-model": "^0.7"
     },
     "require-dev": {
@@ -63,7 +63,7 @@
         "inspect": "phpstan analyse src -l9 --ansi",
         "test": "phpunit --colors=always",
         "psalm": "psalm",
-        "infection": "XDEBUG_MODE=coverage roave-infection-static-analysis-plugin"
+        "infection": "XDEBUG_MODE=coverage infection"
     },
     "extra": {
         "laravel": {
